# Restricted_Statistical_Reporting_Agent

./: .gitignore  LICENSE  README.md  README_RU.md  TESTING_TODO.md  TESTING_TODO_RU.md  env.example  pyproject.toml
configs/: pipeline.example.yaml
litellm/: compose.yaml  config.example.yaml
queries/: report.sql
src/etl_tool/: __init__.py  agent.py  config.py  env.py  hooks.py  litellm_spend.py  models.py  period.py  pipeline.py  quota.py  reporting.py  sql_safety.py  ssh_tunnel.py  storage.py  telegram.py  tools.py
tests/: test_agent.py  test_config.py  test_reporting.py  test_sql_safety.py  test_storage.py  test_telegram.py  test_tools.py
